# STM32-MCP-Server

./: .gitignore  README.md  pyproject.toml
src/stm32_mcp/: __init__.py  __main__.py  board_map.py  build.py  debug_tools.py  flash.py  live_memory.py  serial_bridge.py  serial_client.py  serial_sequence.py  serial_tools.py  server.py  struct_layout.py  toolchain.py
